--- a/public/view/login.html
+++ b/public/view/login.html
@@ -12,7 +12,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
-                        <h3>Login</h3>
+                        <h3 class="text-center">Login</h3>
                     </div>
                     <div class="card-body">
                         <form id="loginForm">
@@ -24,14 +24,56 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password" required>
                             </div>
-                            <button type="submit" class="btn btn-primary">Login</button>
+                            <button type="submit" class="btn btn-primary w-100">Login</button>
                         </form>
-                        <p class="mt-3">Don't have an account? <a href="signup.html">Sign up here</a></p>
+                        <p class="text-center mt-3">
+                            Don't have an account? <a href="/signup.html">Sign up here</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/login.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // Check if user is already logged in
+            const user = localStorage.getItem('user');
+            if (user) {
+                window.location.href = '/chat.html';
+            }
+
+            $('#loginForm').on('submit', function(e) {
+                e.preventDefault();
+                
+                const loginData = {
+                    username: $('#username').val(),
+                    password: $('#password').val()
+                };
+
+                fetch('/api/auth/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(loginData)
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        alert(data.error);
+                    } else {
+                        localStorage.setItem('user', JSON.stringify(data.user));
+                        window.location.href = '/chat.html';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('An error occurred during login');
+                });
+            });
+        });
+    </script>
 </body>
 </html>
