--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -12,7 +12,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
-                        <h3>Sign Up</h3>
+                        <h3 class="text-center">Sign Up</h3>
                     </div>
                     <div class="card-body">
                         <form id="signupForm">
@@ -32,14 +32,52 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password" required>
                             </div>
-                            <button type="submit" class="btn btn-primary">Sign Up</button>
+                            <button type="submit" class="btn btn-primary w-100">Sign Up</button>
                         </form>
-                        <p class="mt-3">Already have an account? <a href="login.html">Login here</a></p>
+                        <p class="text-center mt-3">
+                            Already have an account? <a href="/login.html">Login here</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/signup.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#signupForm').on('submit', function(e) {
+                e.preventDefault();
+                
+                const userData = {
+                    username: $('#username').val(),
+                    firstname: $('#firstname').val(),
+                    lastname: $('#lastname').val(),
+                    password: $('#password').val()
+                };
+
+                fetch('/api/auth/signup', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(userData)
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        alert(data.error);
+                    } else {
+                        alert('Signup successful! Please login.');
+                        window.location.href = '/login.html';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('An error occurred during signup');
+                });
+            });
+        });
+    </script>
 </body>
 </html>
