--- a/public/view/login.html
+++ b/public/view/login.html
@@ -52,7 +52,7 @@
                     password: $('#password').val()
                 };
 
-                fetch('/api/auth/login', {
+                fetch('/routes/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
