--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -56,7 +56,7 @@
                     password: $('#password').val()
                 };
 
-                fetch('/api/auth/signup', {
+                fetch('/routes/auth/signup', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
