--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -43,7 +43,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#signupForm').on('submit', function(e) {
@@ -79,5 +78,7 @@
             });
         });
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/signup.js"></script>
 </body>
 </html>
