--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -89,4 +89,8 @@
             }
         });
     </script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/chat.js"></script>
+    
 </body>
