--- a/public/view/login.html
+++ b/public/view/login.html
@@ -35,7 +35,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
             // Check if user is already logged in
@@ -75,5 +74,9 @@
             });
         });
     </script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/login.js"></script>
+
 </body>
 </html>
